# deckbot

./: .env.example  .gitignore  deckbot-api.service  deckbot-node.service  deckbot.service  mystran_picker  node-setup.md  pyproject.toml
.github/: copilot-instructions.md
deckbot/: __main__.py  bot.py  config.py
deckbot/api/: app.py  auth.py  deps.py
deckbot/api/routers/: files.py  jobs.py  nodes.py
deckbot/cogs/: _checks.py  admin.py  decks.py  listener.py  runs.py
deckbot/db/: models.py  queries.py  session.py
deckbot/models/: deck.py  job.py  repo.py  run.py  sol.py
deckbot/node/: builder.py  client.py  config.py  runner.py  sandbox.py
deckbot/services/: crawler.py  deck_parser.py  job_runner.py  processor.py  reprocessor.py  version_resolver.py  zip_handler.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_runs_schema.py  0003_run_finish.py  0004_run_batches.py
